--- a/README
+++ b/README
@@ -1,1 +1,19 @@
+# Study of the main factors that are related to obesity and its incidence on it
+### This is a data analysis project within the Ironhack Data Analysis Bootcamp, carried out by Jose Martin y Greta Galeana 
+<p align="center">
+
+</p>
+
+## Team Members
+
+| Name             | LinkedIn Profile | Brief Description |
+|------------------|------------------|-------------------|
+| Jose Martin     | [\[Link\]] (www.linkedin.com/in/jose-martin-galeote)   | Data analyst & Jr Full-Stack Web Developer   |
+| Greta Galeana    | [\[Link\]](https://www.linkedin.com/in/gretagaleana?) | Marketing business & Data Analyst |
+
+### A BIG SOCIAL Problem
+According to a recent national survey, 63.7% of men and 48.4% of women in our country are overweight, while obesity affects 19.3% of men and 18.0% Women's.
+If current trends continue, it is expected that by 2035 the prevalence of severe obesity will affect 37% of the Spanish population. It is time to analyze this problem in depth.
+
+### Relevant links
 
